Reduced collision point + fixed wrong scrollbar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -10,19 +10,20 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   font-family: "Quantum", serif;
   font-weight: 400;
   font-style: normal;
   color: #40E7D1;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
   box-sizing: border-box;
   position: relative;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 /* Reset button style to make it transparent */
@@ -40,8 +41,8 @@ button.transparent-button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 101%;
-  height: 101%;
+  width: 100%;
+  height: 100%;
   z-index: 0;
 }
 
